[tool.poetry]
name = "clip-to-video-converter"
version = "0.1.0"
description = "convert twitch clips to one video"
authors = ["lennard28"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.39.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
