[tool.poetry]
name = "clip-to-video-converter"
version = "0.1.0"
description = "convert twitch clips to one video"
authors = ["lennard28"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.39.0"
moviepy = "^1.0.3"
twitch-to-clip = "^1.0.3"
twitch-dl = "2.1.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["ALL"]
ignore = []
line-length = 120

# Möglichkeit, bestimmte Dateien oder Ordner zu ignorieren (z.B. Tests, Migrations)
exclude = ["tests/", "__pycache__/"]
fix = true